--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title> MeroLarks TTT </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
   <!-- select box -->
   <div class="select-box">
-    <header>Tic Tac Toe </header>
+    <header>The MeroLarks TicTacToe </header>
     <div class="content">
-      <div class="title">Choose your character</div>
+      <div class="title"><span>Choose your character</span></div>
       <div class="options">
         <button class="playerX">Player (X)</button>
         <button class="playerO">Player (O)</button>
@@ -24,8 +24,8 @@
   <div class="play-board">
     <div class="details">
       <div class="players">
-        <span class="Xturn">Your turn player X</span>
-        <span class="Oturn">Your turn player O</span>
+        <span class="Xturn">Player X  <p>Your Turn</p> </span>
+        <span class="Oturn">Player O  <p>Your Turn</p> </span>
         <div class="slider"></div>
       </div>
     </div>
@@ -54,7 +54,7 @@
     <div class="btn"><button>Rematch</button></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 
 </body>
 </html>
